--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -59,6 +59,8 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
-    "eslint-webpack-plugin": "^2.1.0"
+    "eslint-webpack-plugin": "^2.1.0",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.5"
   }
 }
