--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,28 @@
-*.log
+build/
+coverage/
+node_modules/
+tmp/
 .DS_Store
-node_modules
-.cache
-.rts2_cache_cjs
-.rts2_cache_esm
-.rts2_cache_umd
-.rts2_cache_system
-dist
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.npmrc
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+.pnp.*
+cc-test-reporter
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.idea/
+env-config.js
+NOTES.md
 .env
+.log
+.vercel
+
+.next
 out
