--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,20 @@
-build/
-coverage/
-node_modules/
-tmp/
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .npmrc
+.pnp.*
 .yarn/*
 !.yarn/releases
 !.yarn/plugins
-.pnp.*
+!.yarn/sdks
+build/
 cc-test-reporter
-package-lock.json
+coverage/
+node_modules/
 npm-debug.log*
+tmp/
+tsconfig.*buildinfo
 yarn-debug.log*
 yarn-error.log*
-.idea/
-env-config.js
-NOTES.md
-.env
-.log
-.vercel
-
-.next
-out
