--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "workspaces": [
     "packages/*"
   ],
+  "version": "0.3.0",
   "scripts": {
     "build": "z-dev-build-ts",
     "build:extra": "(cd packages/dev && copyfiles config/* scripts/* build)",
