--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "zc.zhang",
   "bugs": "https://github.com/zzcwoshizz/dev/issues",
-  "homepage": "https://github.com/zzcwoshizz/dev#readme",
+  "homepage": "https://github.com/zzcwoshizz/dev",
   "license": "Apache-2.0",
   "packageManager": "yarn@4.0.0-rc.42",
   "private": true,
