--- a/packages/lint/package.json
+++ b/packages/lint/package.json
@@ -3,7 +3,7 @@
   "bugs": "https://github.com/zzcwoshizz/dev/issues",
   "contributors": [],
   "description": "A collection of shared CI scripts and development environment",
-  "homepage": "https://github.com/zzcwoshizz/dev/tree/master/packages/lint#readme",
+  "homepage": "https://github.com/zzcwoshizz/dev",
   "license": "Apache-2.0",
   "maintainers": [],
   "name": "@zzcwoshizz/lint",
